linux_foundation/DumpCerts/31/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ping-ingress
  labels:
    app: ping
  namespace: ing-internal
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: foo.bar.com 
    http:
      paths:
      - backend:
          service:
            name: srv-ping
            port:
              number: 5678
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
