linux_foundation/DumpCerts/31/ingress_default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    app: ping
spec:
  defaultBackend:
    service:
      name: srv-ping
      port:
        number: 5678
